Helm/tick/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tick
  annotations:
      kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: telegraf.tick.com
    http:
      paths:
      - path: /
        backend:
          serviceName: telegraf
          servicePort: 8186
  - host: chronograf.tick.com
    http:
      paths:
      - path: /
        backend:
          serviceName: chronograf
          servicePort: 8888
